<resources>
    <string name="app_name">CodiceFiscaleApp</string>
    <string name="about">About</string>
    <string name="chi_siamo">Chi siamo?</string>
    <string name="nomi">Giovanni Pica e Jacopo Onorati, due studenti dell\'Università di Tor Vergata e stiamo proponendo una app che si occupa del calcolo del codice fiscale.</string>
    <string name="contatti">Contatti</string>
    <string name="mail">Mail: giobellamossa@gmail.com jacopo43@gmail.com</string>
    <string name="nome">Nome</string>
    <string name="luogo_di_nascita">Luogo di nascita</string>
    <string name="cognome">Cognome</string>
    <string name="sesso">\ Sesso</string>
    <string name="calcola">Calcola</string>
    <string name="data_di_nascita">\ Data di nascita</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="noluogo">Luogo di nascita non inserito</string>
    <string name="nonome">Nome non inserito</string>
    <string name="nocognome">Cognome non inserito</string>
    <string name="nosesso">Sesso non inserito</string>
    <string name="preferiti">Preferiti</string>
    <string name="todo">TODO</string>
    <string name="luogo_not_valid">Luogo di nascita non valido</string>
    <string name="want_save">Vuoi salvare nel database?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="saved">Codice Fiscale salvato in db!</string>
</resources>
