<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/logo_dim"
        android:layout_height="@dimen/logo_dim"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvNoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:text="@string/chi_siamo"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/noi_sizetext"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/tvNomi"
        android:layout_width="@dimen/nomi_width"
        android:layout_height="@dimen/nomi_height"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/nomi"
        android:textSize="@dimen/nomi_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoi"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvContatti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/contatti"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/noi_sizetext"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomi"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="@dimen/mail_width"
        android:layout_height="@dimen/mail_height"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/mail"
        android:textSize="@dimen/nomi_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContatti"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>