<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <AutoCompleteTextView
        android:id="@+id/tvComuni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:hint="@string/luogo_di_nascita"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:backgroundTint="@color/btn_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgSex"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:backgroundTint="@color/btn_color"
        android:ems="10"
        android:hint="@string/nome"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvComuni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etCognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:ems="10"
        android:hint="@string/cognome"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:backgroundTint="@color/btn_color"
        app:layout_constraintBottom_toTopOf="@+id/tvComuni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:hint="@string/sesso"
        android:textAlignment="viewStart"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCognome"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rgSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSex"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbM"
            android:layout_width="@dimen/radioM"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/m"
            android:buttonTint="@color/btn_color"/>

        <RadioButton
            android:id="@+id/rbF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/f"
            android:buttonTint="@color/btn_color"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:backgroundTint="@color/btn_color"
        android:text="@string/calcola"
        android:textColor="@color/text_btn_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpData"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:hint="@string/data_di_nascita"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvComuni"
        app:layout_constraintVertical_bias="0.0" />

    <DatePicker
        android:id="@+id/dpData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top2"
        android:layout_marginEnd="@dimen/margin_top"
        android:background="@color/data_picker_color"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvData"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>