<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/tessera" />

        <TextView
            android:id="@+id/tvCF"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="17dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="184dp"
            android:text="@string/todo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="262dp"
            android:layout_marginBottom="118dp"
            android:text="@string/want_save"
            android:textAlignment="center"
            android:textColor="@color/btn_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="176dp"
            android:layout_marginBottom="212dp"
            android:text="@string/todo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSurname"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="145dp"
            android:layout_marginEnd="174dp"
            android:layout_marginBottom="237dp"
            android:text="@string/todo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="164dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="216dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="212dp"
            android:text="@string/todo"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivBarcode"
            android:layout_width="236dp"
            android:layout_height="71dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="79dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="267dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/btnSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="304dp"
            android:layout_marginEnd="234dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/si"
            android:textColor="@color/text_btn_color" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="234dp"
            android:layout_marginTop="304dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="@color/btn_no"
            android:text="@string/no"
            android:textColor="@color/text_btn_color" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>